# supervisor-addon

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  supervisord.addon.conf
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release-enshrouded.yml
docs/: ENV_EXAMPLE_REFERENCE.md  SECURITY_GUIDE.md
docs/i18n/: translation-guidelines.md
panel/: index.html  package-lock.json  package.json
panel/src/: main.tsx
panel/src/api/: auth.ts  backups.ts  client.ts  files.ts  servers.ts  types.ts
panel/src/app/: App.tsx  auth.tsx  defaultServer.ts  permissions.ts  routes.tsx
panel/src/app/layout/: ServerSubNav.tsx  TopNav.tsx
panel/src/components/i18n/: LanguageSwitcher.tsx
panel/src/i18n/: index.tsx
panel/src/pages/: ChangePasswordPage.tsx  LoginPage.tsx  StatusPage.tsx
panel/src/styles/: globals.css  tokens.css
supervisor_addon/: __init__.py  action_registry.py  config.py  rpcinterface.py
supervisor_gateway/: __init__.py  __main__.py  auth.py  config.py  main.py  permissions.py  security.py  tls.py
supervisor_gateway/api/: __init__.py  activity.py  auth.py  files.py  logs.py  power.py  schemas.py  servers.py
supervisor_gateway/auth_templates/: admin.json  guest.json  viewer.json
supervisor_gateway/clients/: __init__.py  supervisor_rpc.py
supervisor_gateway/services/: __init__.py  action_service.py  activity_service.py  file_service.py  log_stream_service.py  news_service.py  rpc_errors.py  runtime_stats_service.py  state_persistence_service.py  update_install_service.py  update_service.py
(+22 files in other folders)
